k8s/manifests/alpha/pwf-no.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: fint-skjema-integration-frontend
  name: fint-skjema-integration-frontend
spec:
  ports:
    - port: 8000
  type: ClusterIP
  selector:
    io.kompose.service: fint-skjema-integration-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fint-skjema-integration-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "fint-flyt-demo.vigoiks.no"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fint-skjema-integration-frontend
                port:
                  number: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.kompose.service: fint-skjema-integration-frontend
  name: fint-skjema-integration-frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: fint-skjema-integration-frontend
  template:
    metadata:
      labels:
        io.kompose.service: fint-skjema-integration-frontend
    spec:
      restartPolicy: Always
      containers:
        - image: fintlabsacr.azurecr.io/fint-skjema-integration-frontend:dummy
          name: fint-skjema-integration-frontend
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
          ports:
            - containerPort: 8000
