k8s/manifests/alpha/viken-no.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: fint-flyt-integration-frontend
  name: fint-flyt-integration-frontend
spec:
  ports:
    - port: 8000
  type: ClusterIP
  selector:
    io.kompose.service: fint-flyt-integration-frontend
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-flyt-integration-frontend
  labels:
    app: fint-flyt-integration-frontend
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`viken-no-skjema.vigoiks.no`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: fint-flyt-integration-frontend
          port: 8000
    - match: Host(`viken-no-skjema.vigoiks.no`) && PathPrefix(`/api`)
      kind: Rule
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.kompose.service: fint-flyt-integration-frontend
  name: fint-flyt-integration-frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: fint-flyt-integration-frontend
  template:
    metadata:
      labels:
        io.kompose.service: fint-flyt-integration-frontend
    spec:
      restartPolicy: Always
      containers:
        - image: fintlabsacr.azurecr.io/fint-flyt-integration-frontend:dummy
          name: fint-flyt-integration-frontend
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
          ports:
            - containerPort: 8000
